{
    "name": "TestProjectControls",
    "maps": [
        {
            "name": "TestProjectMap",
            "id": "bcd81803-8fb2-457b-ac5d-4eeebc90dea1",
            "actions": [
                {
                    "name": "PcDirectionUp",
                    "type": "Button",
                    "id": "20558cdd-dbe2-46c4-98cd-c0c9af2568a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PcDirectionDown",
                    "type": "Button",
                    "id": "18d94021-974c-4783-9958-fc9780b8204b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PcDirectionLeft",
                    "type": "Button",
                    "id": "34d6c2a4-ffa6-4fa7-b127-6efe1294771e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PcDirectionRight",
                    "type": "Button",
                    "id": "f6db34f8-1a3d-41fc-8969-abed5d026a56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a799ed41-3656-4531-959b-cb8cb312f2b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "07bcb48b-f785-4f4c-a931-1582c0738e19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextSpell",
                    "type": "Button",
                    "id": "0bdcf72b-e97d-480e-b950-a3a289e968fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevSpell",
                    "type": "Button",
                    "id": "b1d8ad79-6a3e-419d-8c5c-e95e6ab856d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e734ccc6-883e-4007-852a-079547a20bcc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcDirectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66b0e811-9831-4652-8c76-8de2382b48da",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcDirectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09c65ece-f1e2-47ed-b82d-60867b626bc9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcDirectionLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c08ac7c7-6d61-46f2-9042-40844411bc6b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcDirectionRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "331ed1ea-00cb-482a-a388-ab61fb185775",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83d583e5-8047-41bb-a109-dd46c663fea3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b98a7bff-bdff-4374-8824-334089bb4416",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "080d0399-153b-4750-af5b-c167674c997b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}